# phenotron

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: PRENATALSEQ.ipynb
phenotron/: __init__.py  cli.py  excel_transform.py  output.py  validate.py
tests/: __init__.py  test_click_validator.py  test_phenotron.py
